<resources>
    <string name="app_name">News Now</string>
    <string name="all">All</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="scroll_to_top">Scroll to Top</string>
</resources>